Inject WebBeansContext from assembler into additional/replacement extension when needed